<?xml version="1.0"?>
<package format="2">
  <name>rosbridge_gateway</name>
  <version>1.2.0</version>
  <description>A Gateway between two Rosbridge Server</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosbridge_server</url>
  <url type="bugtracker">https://github.com/RobotWebTools/rosbridge_suite/issues</url>
  <url type="repository">https://github.com/RobotWebTools/rosbridge_suite</url>

  <author email="rechsben@students.zhaw.ch">Benjamin Rechsteiner</author>
  <maintainer email="rechsben@students.zhaw.ch">Benjamin Rechsteiner</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosbridge_library</exec_depend>
  <exec_depend>rosbridge_msgs</exec_depend>
  <exec_depend>rosapi</exec_depend>

  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>std_srvs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
